--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,7 +26,7 @@ busser:
   ruby_bindir: /usr/bin
 
 platforms:
-  - name: ubuntu-16.04-vagrant-kitchen_template
+  - name: ubuntu-16.04-vagrant-bastion_host
     driver_plugin: vagrant
     driver:
       vagrantfile_erb: Vagrantfile.erb
@@ -39,7 +39,7 @@ platforms:
         require_puppet_repo: true
         puppet_apt_repo: "http://apt.puppetlabs.com/puppetlabs-release-xenial.deb"
 # TODO: Fix this
-#  - name: ubuntu-16.04-kitchen_template
+#  - name: ubuntu-16.04-bastion_host
 #    driver_plugin: docker
 #    driver_config:
 #      disable_upstart: false
