--- a/hieradata/localtest.yaml
+++ b/hieradata/localtest.yaml
@@ -1,3 +1,3 @@
 ---
-kitchen_template::profiles::lighttpd::installed: true
-kitchen_template::profiles::lighttpd::message: "Welcome at the demo installation"
+bastion_host::profiles::lighttpd::installed: true
+bastion_host::profiles::lighttpd::message: "Welcome at the demo installation"
